<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layoutdb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal_200"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="30dp"
                android:src="@drawable/ic_baseline_arrow_back_24">

            </ImageView>

            <TextView
                android:id="@+id/tvInfoTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/info_title"
                android:textSize="25dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvInfoName"
                android:textSize="15dp"
                android:layout_marginRight="45dp"
                android:text="@string/info_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:inputType="text"
                android:textSize="15dp"
                android:id="@+id/edtName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3">

            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvInfoPhone"
                android:textSize="15dp"
                android:text="@string/info_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:inputType="number"
                android:id="@+id/edtPhone"
                android:textSize="15dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/editinfo_save"/>

            <Button
                android:id="@+id/btnRemove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="30dp"
                android:text="@string/editinfo_delete"/>
        </RelativeLayout>
    </LinearLayout>
</layout>